<resources>
    <string name="app_name">DmApp</string>
    <string name="title_activity_maps">Map</string>

    <string name="drawer_open" >drawer_open</string>
    <string name="drawer_close" >drawer_close</string>


    <string name="nav_item_title_1">Item1</string>
    <string name="nav_item_title_2">Item2</string>
    <string name="nav_item_title_3">Item3</string>
    <string name="nav_item_title_4">Item4</string>
    <string name="nav_item_title_5">Item5</string>
</resources>
