<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single" >
        <item android:id="@+id/nav_item_1"
            android:title="@string/nav_item_title_1"
            android:icon="@mipmap/ic_launcher"
            />
        <item android:id="@+id/nav_item_2"
            android:title="@string/nav_item_title_2"
            android:icon="@mipmap/ic_launcher"
            />
        <item android:id="@+id/nav_item_3"
            android:title="@string/nav_item_title_3"
            android:icon="@mipmap/ic_launcher"
            />
        <item android:id="@+id/nav_item_4"
            android:title="@string/nav_item_title_4"
            android:icon="@mipmap/ic_launcher"
            />
        <item android:id="@+id/nav_item_5"
            android:title="@string/nav_item_title_5"
            android:icon="@mipmap/ic_launcher"
            />
    </group>
</menu>